--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Sparlex - Spa Website Template</title>
+        <title>Coconut Massage - Massage Parlour Website</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -67,7 +67,7 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="text-primary display-4">Sparlex</h1>
+                            <h1 class="text-primary display-4">Coconut Massage</h1>
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
@@ -142,7 +142,7 @@
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 800px;">
                     <p class="fs-4 text-uppercase text-center text-primary">Our Service</p>
-                    <h1 class="display-3">Spa & Beauty Services</h1>
+                    <h1 class="display-3">Massage Parlour & Beauty Services</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-6">
@@ -324,7 +324,7 @@
                             <a href=""><i class="fas fa-angle-right me-2"></i> Minarel baths</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Body treatments</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Aroma Therapy</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Stone Spa</a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Stone Massage Therapy</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
