--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <div class="counter-item p-5">
                         <div class="counter-content bg-white p-4 text-center">
                             <i class="fas fa-spa fa-5x text-primary mb-3"></i>
-                            <h5 class="text-primary">Wellness & Spa</h5>
+                            <h5 class="text-primary">Wellness & Massage</h5>
                         </div>
                         <div class="counter-quantity text-center">
                             <span class="text-white fs-2 fw-bold" data-toggle="counter-up">829</span>
